--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Treino</title>
+    <link rel="shortcut icon" href="img/raio.png" type="image/x-icon">
+    <title>Meu Portifólio</title>
 </head>
 <body>
     <header class="header">
@@ -23,7 +24,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h1>Olá, sou o <span>Marcelo</span></h1>
-            <h3 class="text-animation">Sou um <span></span></h3>
+            <h3 class="text-animation">Sou um&nbsp;<span></span></h3>
             <p>Sempre apreciei atividades que exigiam criatividade; desenhos, composições de músicas e artesanatos.
                 Descobri um outro meio onde posso expressar meus pensamentos e criatividade em forma de arte, usando-se
                 como meio a tecnologia. A programação e o desenvolvimento web me fornecem esse espaço. Estou constantemente estudando
@@ -43,7 +44,7 @@
             </div>
         </div>
         <div class="home-img">
-            <img src="img/marcelo_effect-blue.jpg" alt="">
+            <img src="img/marcelo_effect.jpg" alt="">
         </div>
     </section>
     <section class="education" id="education">
@@ -124,7 +125,7 @@
         </div>
     </section>
     <section class="contact" id="contact">
-        <h2 class="heading"><span>Meu</span>Contato</h2>
+        <h2 class="heading"><span>Me</span>Contatar</h2>
         <form action="">
             <div class="input-group">
                 <div class="input-box">
