--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Olá, sou o <span>Marcelo</span></h1>
+            <h1>Me chamo <span>Marcelo</span></h1>
             <h3 class="text-animation">Sou um&nbsp;<span></span></h3>
             <p>Sempre apreciei atividades que exigiam criatividade; desenhos, composições de músicas e artesanatos.
                 Descobri um outro meio onde posso expressar meus pensamentos e criatividade em forma de arte, usando-se
@@ -88,7 +88,6 @@
                         Semestre: 3º</p>            
                 </div>
             </div>
-
         </div>
     </section>
     <section class="services" id="services">
@@ -125,7 +124,7 @@
         </div>
     </section>
     <section class="contact" id="contact">
-        <h2 class="heading"><span>Me</span>Contatar</h2>
+        <h2 class="heading"><span>Me</span>&nbsp;Contatar</h2>
         <form action="">
             <div class="input-group">
                 <div class="input-box">
