Adicionado menu-mobile

--- a/index.html
+++ b/index.html
@@ -22,6 +22,32 @@
         </nav>
     </header>
     <section class="home" id="home">
+        <aside class="mobile-desactive" id="menu-mobile">
+            <nav class="navbar-mobile">
+                <ul>
+                    <div class="active">
+                        <i class="bi bi-house-fill"></i>
+                        <li><a href="#home">Início</a></li>
+                    </div>
+                    <div>
+                        <i class="bi bi-book-half"></i>
+                        <li><a href="#education">Educação</a></li>
+                    </div>
+                    <div>
+                        <i class="bi bi-tools"></i> 
+                        <li><a href="#services">Serviços</a></li>
+                    </div>
+                    <div>
+                        <i class="bi bi-kanban-fill"></i>
+                        <li><a href="#project">Projetos</a></li>
+                    </div>
+                    <div>
+                        <i class="bi bi-phone-vibrate-fill"></i>
+                        <li><a href="#contacts">Contatos</a></li>
+                    </div>
+                </ul>
+            </nav>
+        </aside>
         <div class="home-content">
             <h1>Me chamo <span>Marcelo</span></h1>
             <h3 class="text-animation">Sou um&nbsp;<span></span></h3>
